# pub-analyzer

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-test.yml
docs/: acknowledgement.md  getting_started.md  help.md  index.md
docs/_templates/python/material/: function.html.jinja
docs/_templates/python/material/docstring/: examples.html
docs/api/internal/: identifier.md  render.md  report.md
docs/api/models/: author.md  concept.md  institution.md  report.md  source.md  topic.md  work.md
docs/assets/css/: custom.css
docs/overrides/: main.html
docs/roadmap/: index.md
pub_analyzer/: __init__.py  __main__.py  main.py
pub_analyzer/css/: author.css  author.tcss  body.css  body.tcss  buttons.css  buttons.tcss  checkbox.tcss  collapsible.tcss  datatable.css  datatable.tcss  editor.tcss  institution.css  institution.tcss  main.css  main.tcss  report.css  report.tcss  researcher.css  resume.tcss  search.css  search.tcss  search_component.css  summary.tcss  tabs.tcss  tree.css
pub_analyzer/internal/: __init__.py  identifier.py  limiter.py  render.py  report.py
pub_analyzer/internal/templates/: author_report.typ
pub_analyzer/internal/templates/author/: author_report.typ  author_resume.typ  author_summary.typ  report.typ  sources.typ  works.typ  works_extended.typ
pub_analyzer/models/: __init__.py  author.py  concept.py  institution.py  report.py  researcher.py  source.py  topic.py  work.py
pub_analyzer/utils/: __init__.py  identifier.py  report.py
pub_analyzer/widgets/: __init__.py  author.py  body.py  report.py  researcher.py  search.py  sidebar.py
pub_analyzer/widgets/author/: __init__.py  cards.py  core.py  tables.py
pub_analyzer/widgets/common/: __init__.py  card.py  filesystem.py  filters.py  input.py  label.py  modal.py  resume.py  selector.py  summary.py
pub_analyzer/widgets/institution/: __init__.py  cards.py  core.py  tables.py
pub_analyzer/widgets/report/: __init__.py  author.py  cards.py  concept.py  core.py  editor.py  export.py  grants.py  institution.py  locations.py  source.py  topic.py  work.py
pub_analyzer/widgets/search/: __init__.py  author.py  core.py  results.py
tests/: __init__.py  conftest.py
tests/data/: author.py  institution.py  source.py  work.py
tests/internal/: __init__.py  test_identifier.py  test_make_report.py  test_report.py
tests/internal/cassettes/test_make_report/: test_make_author_report[A5015201707-expected_report0].yaml  test_make_author_report[A5058237853-expected_report2].yaml  test_make_author_report[A5088021854-expected_report1].yaml
tests/utils/: __init__.py  test_identifier.py  test_make_report.py  test_report.py
tests/widgets/: __init__.py  test_body.py  test_search.py  test_sidebar.py
tests/widgets/cassettes/test_search/: test_author_result_button_redirect.yaml  test_institution_result_button_redirect.yaml
